feat: Add first name, last name to users
