# app/Models/User.php
@@ -28,7 +28,9 @@ class User extends Authenticatable
      * @var array<int, string>
      */
     protected $fillable = [
-        'name',
+        'prefix',
+        'first_name',
+        'last_name',
         'email',
         'password',
     ];
